--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
+		"twitch-js": "^2.0.0-beta.45",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
 		"vitest": "^1.0.0"
