feat: move chat to separate component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
+		"@fontsource/inter": "^5.0.16",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
