--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/chroma-js": "^2.4.3",
+		"@types/seedrandom": "^3.0.8",
+		"chroma-js": "^2.4.2",
+		"seedrandom": "^3.0.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
