--- a/package.json
+++ b/package.json
@@ -12,13 +12,10 @@
 	},
 	"devDependencies": {
 		"@fontsource/inter": "^5.0.16",
+		"@marko19907/string-to-color": "^1.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/chroma-js": "^2.4.3",
-		"@types/seedrandom": "^3.0.8",
-		"chroma-js": "^2.4.2",
-		"seedrandom": "^3.0.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
