--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 	},
 	"devDependencies": {
 		"@fontsource/inter": "^5.0.16",
+		"@jill64/sentry-sveltekit-cloudflare": "^1.7.7",
 		"@marko19907/string-to-color": "^1.0.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sentry/vite-plugin": "^2.15.0",
+		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"svelte": "^5.0.0-next.1",
