--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@vite-pwa/assets-generator": "^0.2.4",
+		"@vite-pwa/sveltekit": "^0.4.0",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"twitch-js": "^2.0.0-beta.45",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^1.0.0"
+		"vitest": "^1.0.0",
+		"workbox-core": "^7.0.0"
 	},
 	"type": "module"
 }
