--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@vite-pwa/assets-generator": "^0.2.4",
 		"@vite-pwa/sveltekit": "^0.6.0",
+		"fast-glob": "^3.3.2",
 		"svelte": "^5.0.0-next.87",
 		"svelte-check": "^4.0.0",
 		"tslib": "^2.4.1",
