--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@sentry/vite-plugin": "^2.15.0",
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@vite-pwa/assets-generator": "^0.2.4",
 		"@vite-pwa/sveltekit": "^0.6.0",
 		"fast-glob": "^3.3.2",
