--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@sentry/vite-plugin": "^2.15.0",
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@vite-pwa/assets-generator": "^0.2.4",
 		"@vite-pwa/sveltekit": "^0.6.0",
 		"fast-glob": "^3.3.2",
@@ -26,7 +26,8 @@
 		"tslib": "^2.4.1",
 		"twitch-js": "^2.0.0-beta.45",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3",
+		"vite": "^6.0.6",
+		"vite-plugin-pwa": "^0.21.1",
 		"vitest": "^2.0.0",
 		"workbox-core": "^7.0.0"
 	},
