--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
 		"@vite-pwa/assets-generator": "^1.0.0",
 		"@vite-pwa/sveltekit": "^1.0.0",
 		"fast-glob": "^3.3.2",
-		"svelte": "^5.0.0-next.87",
+		"svelte": "^5.25.3",
 		"svelte-check": "^4.0.0",
 		"tslib": "^2.4.1",
 		"twitch-js": "^2.0.0-beta.45",
 		"typescript": "^5.0.0",
 		"vite": "^6.0.6",
 		"vite-plugin-pwa": "^1.0.0",
-		"vitest": "^3.0.0",
+		"vitest": "^3.1.1",
 		"workbox-core": "^7.0.0"
 	},
 	"type": "module"
