--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Run tests
         run: direnv exec . devenv test
 
+      - name: Install dependencies
+        run: direnv exec . npm install
+
       - name: Build
         run: direnv exec . npm run build
