--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,9 @@ jobs:
       - uses: cachix/install-nix-action@v26
       - uses: cachix/cachix-action@v14
         with:
-          name: devenv
+          name: meenzen
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          extraPullNames: devenv
 
       - name: Install tools
         run: nix profile install nixpkgs#direnv nixpkgs#nix-direnv
