--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-	"name": "twitch-multichat",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test": "vitest"
-	},
-	"devDependencies": {
-		"@fontsource/inter": "^5.0.16",
-		"@marko19907/string-to-color": "^1.0.0",
-		"@sentry/sveltekit": "^9.10.1",
-		"@sentry/vite-plugin": "^3.0.0",
-		"@sveltejs/adapter-cloudflare": "^6.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@vite-pwa/assets-generator": "^1.0.0",
-		"@vite-pwa/sveltekit": "^1.0.0",
-		"fast-glob": "^3.3.2",
-		"svelte": "^5.25.3",
-		"svelte-check": "^4.0.0",
-		"tslib": "^2.4.1",
-		"twitch-js": "^2.0.0-beta.45",
-		"typescript": "^5.0.0",
-		"vite": "^6.0.6",
-		"vite-plugin-pwa": "^1.0.0",
-		"vitest": "^3.1.1",
-		"workbox-core": "^7.0.0"
-	},
-	"type": "module"
+  "name": "twitch-multichat",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "lint": "eslint . --ext .js,.ts,.svelte",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@fontsource/inter": "^5.0.16",
+    "@marko19907/string-to-color": "^1.0.0",
+    "@sentry/sveltekit": "^9.10.1",
+    "@sentry/vite-plugin": "^3.0.0",
+    "@sveltejs/adapter-cloudflare": "^6.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "@vite-pwa/sveltekit": "^1.0.0",
+    "eslint": "^9.0.23",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-svelte": "^3.0.0",
+    "espree": "^10.3.0",
+    "fast-glob": "^3.3.2",
+    "globals": "^16.0.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
+    "svelte": "^5.25.4",
+    "svelte-check": "^4.0.0",
+    "tslib": "^2.4.1",
+    "twitch-js": "^2.0.0-beta.45",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.6",
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^3.1.1",
+    "workbox-core": "^7.0.0"
+  },
+  "type": "module"
 }
