--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,18 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended"]
+  "extends": ["config:recommended"],
+  "packageRules": [
+    {
+      "groupName": "sentry",
+      "matchPackageNames": ["@sentry/**"]
+    },
+    {
+      "groupName": "svelte",
+      "matchPackageNames": ["@sveltejs/**", "svelte", "svelte-check"]
+    },
+    {
+      "groupName": "eslint and prettier",
+      "matchPackageNames": ["**eslint**", "**prettier**"]
+    }
+  ]
 }
