--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,12 @@
 #!/usr/bin/env bash
-use flake . --no-pure-eval
+
+export DIRENV_WARN_TIMEOUT=20s
+
+eval "$(devenv direnvrc)"
+
+# `use devenv` supports the same options as the `devenv shell` command.
+#
+# To silence all output, use `--quiet`.
+#
+# Example usage: use devenv --quiet --impure --option services.postgres.enable:bool true
+use devenv
