--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@ vite.config.ts.timestamp-*
 .direnv
 .devenv
 .pre-commit-config.yaml
+
+# Devenv
+.devenv*
+devenv.local.nix
+devenv.local.yaml
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
