--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@ethercorps/sveltekit-og": "^4.2.1",
     "@fontsource/inter": "^5.2.8",
     "@sentry/sveltekit": "^10.30.0",
     "@sveltejs/adapter-cloudflare": "^7.2.4",
